--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BioSync IoT — Ecosistema de Biometría Conectada</title>
 
     <!-- Favicon (placeholder, reemplaza con tu imagen en /media/) -->
-    <link rel="icon" type="image/svg+xml" href="media/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="./assets/media/favicon.svg">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
         <!-- Logo + Brand -->
         <a class="navbar-brand d-flex align-items-center gap-2" href="#">
             <div class="brand-icon">
-                <img src="media/logo.svg" alt="BioSync Logo" class="brand-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+                <img src="./assets/media/logo.svg" alt="BioSync Logo" class="brand-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
                 <div class="brand-icon-fallback" style="display:none">
                     <i class="fa-solid fa-heart-pulse"></i>
                 </div>
